add Mmenu Inventory

--- a/UI-UX-for-SaaS.html
+++ b/UI-UX-for-SaaS.html
@@ -85,7 +85,6 @@
           <a
             href="Mmenu-for-End-User"
             class="card"
-            style="background-color: #f85757"
           >
             <div class="card_text">
               <div class="card_title">
@@ -112,86 +111,9 @@
               <img src="./images/MMENU_for_End_User.png" />
             </div>
           </a>
-          <a href="./Vietrip" class="card" style="background-color: #ee7496">
-            <div class="card_text">
-              <div class="card_title">
-                <img src="./images/Vietrip_logo.png" />
-                <h3>Vietrip</h3>
-              </div>
-              <p>
-                Vietrip is a system of tour packages booking managements for
-                Tour operator as well as Tourists. It also offers on-going tour
-                tracking and other services.
-              </p>
-              <div class="tag">
-                <p>Ios</p>
-                <p>Android</p>
-              </div>
-              <button class="b--outlined" onclick="location.href='/Vietrip'">
-                View details
-              </button>
-            </div>
-            <div class="card_img">
-              <img src="./images/Vietrip.png" />
-            </div>
-          </a>
-          <a href="./POMA" class="card" style="background-color: #1cb5f6">
-            <div class="card_text">
-              <div class="card_title">
-                <img src="./images/Poma_logo.png" />
-                <h3>POMA</h3>
-              </div>
-              <p>
-                POMA is an apartment operation management application that
-                solves the problem of optimizing the management process and
-                communication.
-              </p>
-              <div class="tag">
-                <p>Ios</p>
-                <p>Android</p>
-              </div>
-              <button class="b--outlined" onclick="location.href='/POMA'">
-                View details
-              </button>
-            </div>
-            <div class="card_img">
-              <img src="./images/POMA.png" />
-            </div>
-          </a>
-          <a
-            href="./Mmenu-for-Admin"
-            class="card"
-            style="background-color: #207eec"
-          >
-            <div class="card_text">
-              <div class="card_title">
-                <img src="./images/Mmenu_logo.png" />
-                <h3>for Admin</h3>
-              </div>
-              <p>
-                Mmenu for Admin is a holistic cross-platform management software
-                for F&B business operations.
-              </p>
-              <div class="tag">
-                <p>Ios</p>
-                <p>Android</p>
-                <p>Web</p>
-              </div>
-              <button
-                class="b--outlined"
-                onclick="location.href='/Mmenu-for-Admin'"
-              >
-                View details
-              </button>
-            </div>
-            <div class="card_img">
-              <img src="./images/MMENU_for_Admin.png" />
-            </div>
-          </a>
           <a
             href="./Mmenu-Inventory"
             class="card"
-            style="background-color: #1cb5f6"
           >
             <div class="card_text">
               <div class="card_title">
@@ -219,6 +141,83 @@
               <img src="./images/MMENU_Inventory.png" />
             </div>
           </a>
+          <a href="./Vietrip" class="card" >
+            <div class="card_text">
+              <div class="card_title">
+                <img src="./images/Vietrip_logo.png" />
+                <h3>Vietrip</h3>
+              </div>
+              <p>
+                Vietrip is a system of tour packages booking managements for
+                Tour operator as well as Tourists. It also offers on-going tour
+                tracking and other services.
+              </p>
+              <div class="tag">
+                <p>Ios</p>
+                <p>Android</p>
+              </div>
+              <button class="b--outlined" onclick="location.href='/Vietrip'">
+                View details
+              </button>
+            </div>
+            <div class="card_img">
+              <img src="./images/Vietrip.png" />
+            </div>
+          </a>
+          <a href="./POMA" class="card" >
+            <div class="card_text">
+              <div class="card_title">
+                <img src="./images/Poma_logo.png" />
+                <h3>POMA</h3>
+              </div>
+              <p>
+                POMA is an apartment operation management application that
+                solves the problem of optimizing the management process and
+                communication.
+              </p>
+              <div class="tag">
+                <p>Ios</p>
+                <p>Android</p>
+              </div>
+              <button class="b--outlined" onclick="location.href='/POMA'">
+                View details
+              </button>
+            </div>
+            <div class="card_img">
+              <img src="./images/POMA.png" />
+            </div>
+          </a>
+          
+          
+          <!-- <a
+            href="./Mmenu-for-Admin"
+            class="card"
+          >
+            <div class="card_text">
+              <div class="card_title">
+                <img src="./images/Mmenu_logo.png" />
+                <h3>for Admin</h3>
+              </div>
+              <p>
+                Mmenu for Admin is a holistic cross-platform management software
+                for F&B business operations.
+              </p>
+              <div class="tag">
+                <p>Ios</p>
+                <p>Android</p>
+                <p>Web</p>
+              </div>
+              <button
+                class="b--outlined"
+                onclick="location.href='/Mmenu-for-Admin'"
+              >
+                View details
+              </button>
+            </div>
+            <div class="card_img">
+              <img src="./images/MMENU_for_Admin.png" />
+            </div>
+          </a> -->
         </div>
       </div>
     </div>
