--- a/Eclipse.html
+++ b/Eclipse.html
@@ -80,8 +80,7 @@
           </div>
         </div>
         <p>
-          Lorem ipsum dolor sit amet consectetur. Vitae quis eget tincidunt duis
-          quis pretium. <br /><br />
+          Eclipse is a personal brand of a musician/producer. <br /><br />
           <b>Tools:</b> Illustrator, Photoshop, Figma
         </p>
         <img src="./images/Branding/Eclipse/1.png" alt="Eclipse cover" />
