--- a/Goldie.html
+++ b/Goldie.html
@@ -80,8 +80,8 @@
           </div>
         </div>
         <p>
-          Lorem ipsum dolor sit amet consectetur. Vitae quis eget tincidunt duis
-          quis pretium. <br /><br />
+          Goldie is a clothing brand, its target audience are youngsters.
+ <br /><br />
           <b>Tools:</b> Illustrator, Photoshop
         </p>
         <img src="./images/Branding/Goldie/1.png" alt="Goldie cover" />
