--- a/HTH.html
+++ b/HTH.html
@@ -80,8 +80,8 @@
           </div>
         </div>
         <p>
-          Lorem ipsum dolor sit amet consectetur. Vitae quis eget tincidunt duis
-          quis pretium. <br /><br />
+          <!-- Lorem ipsum dolor sit amet consectetur. Vitae quis eget tincidunt duis
+          quis pretium. <br /><br /> -->
           <b>Tools:</b> Illustrator, Photoshop
         </p>
         <img src="./images/Branding/HTH/1.png" alt="HTH cover" />
