--- a/Mmenu-Inventory.html
+++ b/Mmenu-Inventory.html
@@ -76,7 +76,7 @@
         <p>
           Mmenu Inventory is one of the main features of Mmenu for Admin.
                 However, it also stands as a separate product that helps in
-                stock management.
+                storage management.
           <br /><br />
           <b>Role:</b> UI designer<br /><br />
           <b>Timeline:</b> 2 months<br /><br />
