--- a/contact.html
+++ b/contact.html
@@ -110,8 +110,7 @@
           <div class="other_addresses">
             <div class="myemail">
               <label for="myemail">My Email</label>
-              <p>dominik4793@gmail.com</p>
-              <p>vuongduc47@gmail.com (Vietnamese)</p>
+              <p>vuongduc47@gmail.com</p>
             </div>
             <div class="mysocials">
               <a href="https://t.me/DVfromtheeast" target="_blank">
@@ -120,7 +119,7 @@
               </a>
               <a href="https://twitter.com/DV_fromtheEast" target="_blank">
                 <i class="material-icons">arrow_outward</i>
-                <p>Twitter</p>
+                <p>X</p>
               </a>
               <a
                 href="https://discordapp.com/users/440616189656432661/"
