--- a/index.html
+++ b/index.html
@@ -126,21 +126,20 @@
         </div>
       </div>
     </div> -->
-    <!-- footer -->
     <footer>
       <div class="footer">
+        <div class="footer_group">
         <div class="footer_logo">
           <img src="./images/Logo_DV_Footer.svg" alt="DV logo footer" />
         </div>
         <div class="footer_text">
           <h3>Duc Vuong</h3>
-          <p>dominik4793@gmail.com</p>
-          <p>vuongduc47@gmail.com (Vietnamese)</p>
+          <p>vuongduc47@gmail.com</p>
         </div>
+      </div>
         <div class="footer_social">
           <a href="https://twitter.com/DV_fromtheEast" target="_blank"
-            ><i class="fa-brands fa-twitter"></i
-          ></a>
+            ><i class="fa-brands fa-x-twitter"></i></a>
           <a
             href="https://discordapp.com/users/440616189656432661/"
             target="_blank"
