--- a/Landing-Page-Design.html
+++ b/Landing-Page-Design.html
@@ -82,7 +82,7 @@
           </div>
         </div>
         <div class="work_cards">
-          <a href="LP-Mmenu" class="card" style="background-color: #ff4151">
+          <a href="LP-Mmenu" class="card">
             <div class="card_text">
               <div class="card_title">
                 <img src="./images/Mmenu_logo.png" />
@@ -104,7 +104,7 @@
               <img src="./images/LP_MMENU.png" />
             </div>
           </a>
-          <a href="LP-Uranium" class="card" style="background-color: #e29f18">
+          <a href="LP-Uranium" class="card">
             <div class="card_text">
               <div class="card_title">
                 <img src="./images/Uranium_logo.png" />
@@ -129,7 +129,6 @@
           <a
             href="LP-Sun-Medical-Center"
             class="card"
-            style="background-color: #f4578f"
           >
             <div class="card_text">
               <div class="card_title">
@@ -163,35 +162,7 @@
     <div class="dec">
       <img src="./images/DV_BG.svg" alt="DV BG" />
     </div>
-    <!-- footer -->
-    <footer>
-      <div class="footer">
-        <div class="footer_logo">
-          <img src="./images/Logo_DV_Footer.svg" alt="DV logo footer" />
-        </div>
-        <div class="footer_text">
-          <h3>Duc Vuong</h3>
-          <p>dominik4793@gmail.com</p>
-          <p>vuongduc47@gmail.com (Vietnamese)</p>
-        </div>
-        <div class="footer_social">
-          <a href="https://twitter.com/DV_fromtheEast" target="_blank"
-            ><i class="fa-brands fa-twitter"></i
-          ></a>
-          <a
-            href="https://discordapp.com/users/440616189656432661/"
-            target="_blank"
-            ><i class="fa-brands fa-discord"></i
-          ></a>
-          <a href="https://t.me/DVfromtheeast" target="_blank"
-            ><i class="fa-brands fa-telegram"></i
-          ></a>
-          <a href="https://www.linkedin.com/in/dvfromtheeast/" target="_blank"
-            ><i class="fa-brands fa-linkedin"></i
-          ></a>
-        </div>
-      </div>
-    </footer>
+    
     <script
       src="https://kit.fontawesome.com/3b84c2c88e.js"
       crossorigin="anonymous"
