--- a/Mmenu.html
+++ b/Mmenu.html
@@ -80,8 +80,7 @@
           </div>
         </div>
         <p>
-          Lorem ipsum dolor sit amet consectetur. Vitae quis eget tincidunt duis
-          quis pretium. <br /><br />
+          Mmenu - a software company that provides holistic digital services and devices for merchants in F&B industry. <br /><br />
           <b>Tools:</b> Illustrator, Photoshop, Figma
         </p>
         <img src="./images/Branding/Mmenu/1.png" alt="Mmenu cover" />
