--- a/UI-UX-for-SaaS.html
+++ b/UI-UX-for-SaaS.html
@@ -108,7 +108,7 @@
               </button>
             </div>
             <div class="card_img">
-              <img src="./images/MMENU_for_End_User.png" />
+              <img src="./images/MMENU for End User.png" />
             </div>
           </a>
           <a
@@ -123,7 +123,7 @@
               <p>
                 Mmenu Inventory is one of the main features of Mmenu for Admin.
                 However, it also stands as a separate product that helps in
-                stock management.
+                storage management.
               </p>
               <div class="tag">
                 <p>Ios</p>
@@ -225,35 +225,7 @@
     <div class="dec">
       <img src="./images/DV_BG.svg" alt="DV BG" />
     </div>
-    <!-- footer -->
-    <footer>
-      <div class="footer">
-        <div class="footer_logo">
-          <img src="./images/Logo_DV_Footer.svg" alt="DV logo footer" />
-        </div>
-        <div class="footer_text">
-          <h3>Duc Vuong</h3>
-          <p>dominik4793@gmail.com</p>
-          <p>vuongduc47@gmail.com (Vietnamese)</p>
-        </div>
-        <div class="footer_social">
-          <a href="https://twitter.com/DV_fromtheEast" target="_blank"
-            ><i class="fa-brands fa-twitter"></i
-          ></a>
-          <a
-            href="https://discordapp.com/users/440616189656432661/"
-            target="_blank"
-            ><i class="fa-brands fa-discord"></i
-          ></a>
-          <a href="https://t.me/DVfromtheeast" target="_blank"
-            ><i class="fa-brands fa-telegram"></i
-          ></a>
-          <a href="https://www.linkedin.com/in/dvfromtheeast/" target="_blank"
-            ><i class="fa-brands fa-linkedin"></i
-          ></a>
-        </div>
-      </div>
-    </footer>
+    
     <script
       src="https://kit.fontawesome.com/3b84c2c88e.js"
       crossorigin="anonymous"
