--- a/Landing-Page-Design.html
+++ b/Landing-Page-Design.html
@@ -82,11 +82,32 @@
           </div>
         </div>
         <div class="work_cards">
-          <a href="LP-Mmenu" class="card">
+          <a href="LP-Novine" class="card">
+            <div class="card_text">
+              <div class="card_title">
+                <img src="./images/Novine_logo.png" />
+                <h3>Novine</h3>
+              </div>
+              <p>
+                Novine - a group of visionary individuals who share an unwavering enthusiasm for crafting immersive web experiences.
+              </p>
+              <div class="tag">
+                <p>Web</p>
+                <p>Desktop & Mobile</p>
+              </div>
+              <button class="b--outlined" onclick="location.href='/LP-Novine'">
+                View details
+              </button>
+            </div>
+            <div class="card_img">
+              <img src="./images/LP_Novine.png" />
+            </div>
+          </a>
+          <a href="LP-MmenuVN" class="card">
             <div class="card_text">
               <div class="card_title">
                 <img src="./images/Mmenu_logo.png" />
-                <h3>Mmenu</h3>
+                <h3>Mmenu VN</h3>
               </div>
               <p>
                 Website of Mmenu - a software company that provides holistic
@@ -96,12 +117,34 @@
                 <p>Web</p>
                 <p>Desktop & Mobile</p>
               </div>
-              <button class="b--outlined" onclick="location.href='/LP-Mmenu'">
+              <button class="b--outlined" onclick="location.href='/LP-LP-MmenuVN'">
                 View details
               </button>
             </div>
             <div class="card_img">
               <img src="./images/LP_MMENU.png" />
+            </div>
+          </a>
+          <a href="LP-MmenuJP" class="card">
+            <div class="card_text">
+              <div class="card_title">
+                <img src="./images/Mmenu_logo.png" />
+                <h3>Mmenu JP</h3>
+              </div>
+              <p>
+                Website of Mmenu - a software company that provides holistic
+                digital services and devices for merchants in F&B industry.
+              </p>
+              <div class="tag">
+                <p>Web</p>
+                <p>Desktop & Mobile</p>
+              </div>
+              <button class="b--outlined" onclick="location.href='/LP-LP-MmenuJP'">
+                View details
+              </button>
+            </div>
+            <div class="card_img">
+              <img src="./images/LP_MMENUJP.png" />
             </div>
           </a>
           <a href="LP-Uranium" class="card">
