work on homepage

--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DV</title>
-    <link rel="icon" type="image/x-icon" href="./images/Favicon_DV.svg" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="https://i.ibb.co/JQX0wyY/DVFavicon.png"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -129,17 +133,18 @@
     <footer>
       <div class="footer">
         <div class="footer_group">
-        <div class="footer_logo">
-          <img src="./images/Logo_DV_Footer.svg" alt="DV logo footer" />
+          <div class="footer_logo">
+            <img src="./images/Logo_DV_Footer.svg" alt="DV logo footer" />
+          </div>
+          <div class="footer_text">
+            <h3>Duc Vuong</h3>
+            <p>vuongduc47@gmail.com</p>
+          </div>
         </div>
-        <div class="footer_text">
-          <h3>Duc Vuong</h3>
-          <p>vuongduc47@gmail.com</p>
-        </div>
-      </div>
         <div class="footer_social">
           <a href="https://twitter.com/DV_fromtheEast" target="_blank"
-            ><i class="fa-brands fa-x-twitter"></i></a>
+            ><i class="fa-brands fa-x-twitter"></i
+          ></a>
           <a
             href="https://discordapp.com/users/440616189656432661/"
             target="_blank"
